# zcvote

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  package.json  pnpm-lock.yaml  pubspec.yaml
.github/actions/android/: action.yml
.github/actions/linux/: action.yml
.github/actions/mac/: action.yml
.github/actions/windows/: action.yml
.github/workflows/: build.yml
android/app/: build.gradle.kts  zcvote-keystore.jks.enc
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/cc/methyl/zcvote/: MainActivity.kt
docs/.vuepress/: config.js
ios/: export_options.plist
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: client.dart  main.dart  model.dart  router.dart  store.dart
lib/pages/: create.dart  home.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/src/rust/api/: app.dart  data.dart  data.freezed.dart
linux/: CMakeLists.txt
linux/flutter/: generated_plugins.cmake
linux/packaging/: appdata.xml
linux/packaging/appimage/: make_config.yaml
linux/packaging/deb/: make_config.yaml
linux/runner/: my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
misc/: app.json  apple.distrib.p12.enc  gcp.json.enc  ios.mobileprovision.enc  macos.cert.enc
rust/: Cargo.toml
rust/src/: client.rs  db.rs  frb_generated.rs
rust/src/api/: app.rs  data.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/ios/: lfrb.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: lfrb.podspec
rust_builder/windows/: CMakeLists.txt
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/packaging/exe/: make_config.yaml
windows/runner/: Runner.rc  main.cpp
zcash-vote2/: Cargo.toml
zcash-vote2/src/: builder.rs  data.rs  db.rs  download.rs  error.rs  legacy.rs  lib.rs  seed.rs  sync.rs  trees.rs
