[package]
edition = "2021"
name = "lfrb"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "vote-client"
path = "src/client.rs"
required-features = ["client-deps"]

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
flutter_rust_bridge = "=2.11.1"
futures = "0.3.31"
halo2_gadgets = "0.3.1"
halo2_proofs = "0.3.1"
hex = "0.4.3"

env_logger = "0.11.8"
libsqlite3-sys = "0.30.0"
orchard = "0.11.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_with = "3.15.0"
sqlx = {version = "0.8.6", features = ["runtime-tokio", "sqlite", "macros", "migrate"]}
thiserror = "2.0.17"
tokio = "1.48.0"
tracing = "0.1.41"
tracing-subscriber = {version = "0.3.20", features = ["env-filter", "fmt", "json"]}
zcash_address = "0.10.0"
zcash_encoding = "0.3.0"
zcash_keys = "0.12.0"
zcash_note_encryption = "0.4.1"
zcash_primitives = "0.26.0"
zcash_proofs = "0.26.0"
zcash_protocol = "0.7.0"

dotenv = {version = "0.15.0", optional = true}
rocket = {version = "0.5.1", optional = true}

[features]
client-deps = ["rocket", "dotenv"]

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(frb_expand)']}
