[package]
edition = "2024"
name = "lfrb"
version = "0.1.0"

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[[bin]]
name = "vote-client"
path = "src/client.rs"
required-features = ["client-deps"]

[dependencies]
flutter_rust_bridge = "=2.11.1"

dotenv = {version = "0.15.0", optional = true}
rocket = {version = "0.5.1", optional = true}
env_logger = { workspace = true }
struct-convert = "1.4.0"

anyhow = { workspace = true }
byteorder = { workspace = true }
futures = { workspace = true }
hex = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

sqlx = { workspace = true }
tokio = { workspace = true }

zcash-vote2 = { path = "../zcash-vote2" }

[features]
client-deps = ["rocket", "dotenv"]

[lints.rust]
unexpected_cfgs = {level = "warn", check-cfg = ['cfg(frb_expand)']}
