[package]
name = "zcash-vote2"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

rand_core = { workspace = true }
bip39 = { workspace = true }
prost = { workspace = true }
tonic = { workspace = true }
tonic-prost = { workspace = true }
num-integer = { workspace = true }

halo2_gadgets = { workspace = true }
halo2_proofs = { workspace = true }
orchard = { workspace = true }

zcash_address = { workspace = true }
zcash_encoding = { workspace = true }
zcash_keys = { workspace = true }
zcash_note_encryption = { workspace = true }
zcash_primitives = { workspace = true }
zcash_proofs = { workspace = true }
zcash_protocol = { workspace = true }
